# FNN4NewsRecommendation

./: .gitignore  README.md  example_explain_prompt.txt  example_explain_response.txt  main.py  pyproject.toml
configs/: config_ebnerd-ablation.json  config_ebnerd-sensitivity.json  config_ebnerd.json  config_mind-ablation.json  config_mind.json  nrms_mind.yaml
docs/: _config.yml  index.md
scripts/: ablation_study.sh  all_experiments.sh  baselines.sh  ebnerd_experiment.sh  mind_experiment.sh  sensitivity_analysis.sh
scripts/baselines/: nrms_ebnerd.py  nrms_mind.py
src/: __init__.py  evaluation.py  metrics.py  model.py  utils.py
src/data/: __init__.py  create_graph.py
